Ajustes finales faltan animaciones 21-06-2025

--- a/lang/en.json
+++ b/lang/en.json
@@ -172,6 +172,7 @@
       "lastname": "Last Name",
       "email": "Email",
       "subject": "Subject",
+      "direccion": "Address",
       "message": "Message",
       "write": "Write your message",
       "send": "Send",
