--- a/lang/es.json
+++ b/lang/es.json
@@ -171,7 +171,8 @@
       "name": "Nombre",
       "lastname": "Apellido",
       "email": "Correo Electrónico",
-      "direccion": "Dirección",
+      "pais": "País",
+      "ciudad": "Ciudad",
       "subject": "Motivo",
       "message": "Mensaje",
       "write": "Escribir",
