--- a/lang/pt.json
+++ b/lang/pt.json
@@ -171,7 +171,8 @@
       "name": "Nome",
       "lastname": "Sobrenome",
       "email": "E-mail",
-      "direccion": "Endereço",
+      "pais": "País",
+      "ciudad": "Cidade",
       "subject": "Motivo",
       "message": "Mensagem",
       "write": "Escrever",
