--- a/lang/en.json
+++ b/lang/en.json
@@ -172,7 +172,8 @@
       "lastname": "Last Name",
       "email": "Email",
       "subject": "Subject",
-      "direccion": "Address",
+      "pais": "Country",
+      "ciudad": "City",
       "message": "Message",
       "write": "Write your message",
       "send": "Send",
