--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,11 @@
         "title": "Families Aligned with the Eternal",
         "img": "./img/book-familia.webp",
         "link": "https://peniel.com/products/familias-alineadas-a-lo-eterno-como-expresar-y-multiplicar-la-vida-de-dios-en-las-generaciones?_pos=2&_sid=dee387de6&_ss=r"
+      },
+      {
+        "title": "A psicologia de Deus",
+        "img": "./img/book-psicologia-pt.webp",
+        "link": "https://loja.editorarica.com.br/produtos/a-psicologia-de-deus/"
       }
     ],
     "free": [
