--- a/lang/pt.json
+++ b/lang/pt.json
@@ -102,7 +102,12 @@
         "title": "Famílias Alinhadas ao Eterno",
         "img": "./img/book-familia.webp",
         "link": "https://peniel.com/products/familias-alineadas-a-lo-eterno-como-expresar-y-multiplicar-la-vida-de-dios-en-las-generaciones?_pos=2&_sid=dee387de6&_ss=r"
-      }      
+      },
+      {
+        "title": "La Psicología de Dios",
+        "img": "./img/book-psicologia.webp",
+        "link": "https://www.amazon.com/-/es/psicolog%C3%ADa-Dios-dise%C3%B1o-original-Spanish/dp/9875576816/ref=sr_1_1?__mk_es_US=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3JW04WIYYBC4W&dib=eyJ2IjoiMSJ9.SE2MOmWhBiYc2f7VVX86UYDGiQVuyVWrN6NnlbBY7Dm1oUmBFlLAO0IKM4PAy7XdRXMT2uvN3RkisrEIrEys0snaRlNRfAVI5G7azyWi8lY.T_F5HeDtPl6_lTFI0L6t1P5ZTKnGNLR2EdASz4O7fac&dib_tag=se&keywords=David+Firman&qid=1749931518&s=books&sprefix=david+firman%2Cstripbooks-intl-ship%2C184&sr=1-1"
+      }   
     ],
     "free": [
       {
