Se agregan 2 videos mas

--- a/lang/en.json
+++ b/lang/en.json
@@ -19,7 +19,7 @@
   "about": {
     "title": "About Me",
     "description": [
-      "<strong>I’ve been married</strong> to Denise Martínez since 1999. <strong>Father</strong> to Elías and Ana Paula.",
+      "<strong>I'm Argentine, I’ve been married</strong> to Denise Martínez since 1999. <strong>Father</strong> to Elías and Ana Paula.",
       "<strong>A clinical psychologist</strong> since 1998, specialized in <strong>Systemic Family Therapy</strong>.",
       "I hold a <strong>Bachelor’s Degree in Theology</strong> and serve as <strong>Pastor</strong> at “Todo Nuevo en Cristo.”",
       "I’m a passionate <strong>author</strong> of books about the whole being, courtship, marriage, and family. I greatly enjoy giving <strong>international conferences</strong> that build up families and the Church."
@@ -167,6 +167,14 @@
       {
         "title": "Can we trust our mind and emotions? Part 2",
         "id": "7zJ1NOWcV4w"
+      },
+      {
+        "title": "Soul Protocols. MDV Women's Congress 2024",
+        "id": "jPhuCsah2yg"
+      },
+      {
+        "title": "Spiritual Health",
+        "id": "oVLTXqOqXx0"
       }
     ],
     "main": {
