--- a/lang/es.json
+++ b/lang/es.json
@@ -19,7 +19,7 @@
   "about": {
     "title": "Sobre mí",
     "description": [
-      "<strong>Soy esposo</strong> de Denise Martínez desde 1999. <strong>Padre</strong> de Elías y Ana Paula.",
+      "<strong>Soy Argentino, esposo</strong> de Denise Martínez desde 1999. <strong>Padre</strong> de Elías y Ana Paula.",
       "De profesión <strong>Psicólogo clínico</strong> desde el año 1998 con especialidad en <strong>Terapia Familiar Sistémica</strong>.",
       "Soy <strong>Bachiller en Teología</strong> y <strong>Pastor</strong> en “Todo Nuevo en Cristo”.",
       "Apasionado <strong>Escritor</strong> de libros sobre el ser integral, noviazgo, matrimonio y familia. Disfruto mucho brindar <strong>Conferencias</strong> a nivel internacional edificando a las familias y la Iglesia."
@@ -167,6 +167,14 @@
       {
         "title": "¿Podemos confiar en nuestra mente y emociones? Parte 2",
         "id": "7zJ1NOWcV4w"
+      },
+      {
+        "title": "Protocolos del alma. Congreso de mujeres mdv 2024",
+        "id": "jPhuCsah2yg"
+      },
+      {
+        "title": "Salud Espiritual",
+        "id": "oVLTXqOqXx0"
       }
     ],
     "main": {
