--- a/lang/pt.json
+++ b/lang/pt.json
@@ -19,7 +19,7 @@
   "about": {
     "title": "Sobre mim",
     "description": [
-      "<strong>Sou esposo</strong> da Denise Martínez desde 1999. <strong>Pai</strong> do Elías e da Ana Paula.",
+      "<strong>Sou Argentino, esposo</strong> da Denise Martínez desde 1999. <strong>Pai</strong> do Elías e da Ana Paula.",
       "Psicólogo clínico desde 1998, com especialização em <strong>Terapia Familiar Sistêmica</strong>.",
       "Sou <strong>Bacharel em Teologia</strong> e <strong>Pastor</strong> na “Tudo Novo em Cristo”.",
       "Sou um apaixonado <strong>escritor</strong> de livros sobre o ser integral, namoro, casamento e família. Desfruto muito em servir ministrando <strong>conferências</strong> edificando famílias e a Igreja a nível internacional."
@@ -167,6 +167,14 @@
       {
         "title": "Podemos confiar em nossa mente e emoções? Parte 2",
         "id": "7zJ1NOWcV4w"
+      },
+      {
+        "title": "Protocolos da alma. Congresso de mulheres MDV 2024",
+        "id": "jPhuCsah2yg"
+      },
+      {
+        "title": "Saúde Espiritual",
+        "id": "oVLTXqOqXx0"
       }
     ],
     "main": {
