Se actializan links libros compra, 23-01-2026

--- a/lang/pt.json
+++ b/lang/pt.json
@@ -96,7 +96,7 @@
       {
         "title": "A psicologia de Deus",
         "img": "./img/book-psicologia-pt.webp",
-        "link": "https://loja.editorarica.com.br/produtos/a-psicologia-de-deus/"
+        "link": "https://www.loja.editorarica.com.br/produtos/a-psicologia-de-deus-por-david-firman-zjy6u/"
       },
       {
         "title": "Famílias Alinhadas ao Eterno",
