--- a/lang/es.json
+++ b/lang/es.json
@@ -96,17 +96,17 @@
       {
         "title": "La Psicología de Dios",
         "img": "./img/book-psicologia.webp",
-        "link": "https://peniel.com/products/la-psicologia-de-dios"
+        "link": "https://peniel.click/la-psicologia-de-dios-el-alma-en-su-diseno-original/"
       },
       {
         "title": "Familias Alineadas a lo Eterno",
         "img": "./img/book-familia.webp",
-        "link": "https://peniel.com/products/familias-alineadas-a-lo-eterno-como-expresar-y-multiplicar-la-vida-de-dios-en-las-generaciones?_pos=2&_sid=dee387de6&_ss=r"
+        "link": "https://peniel.click/familias-alineadas-a-lo-eterno-como-expresar-y-multiplicar-la-vida-de-dios-en-las-generaciones/"
       },
       {
         "title": "A psicologia de Deus",
         "img": "./img/book-psicologia-pt.webp",
-        "link": "https://loja.editorarica.com.br/produtos/a-psicologia-de-deus/"
+        "link": "https://www.loja.editorarica.com.br/produtos/a-psicologia-de-deus-por-david-firman-zjy6u/"
       }
     ],
     "free": [
